--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
     <h1>hello, world</h1>
      <p>Call me Ishmael.</p>
   </body>
+  <p>content</p>
+  <img src="images/breaching_whale.jpg"/>
 </html>
