--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <h1>hello, world</h1>
      <p>Call me Ishmael.</p>
-  </body>
-  <p>content</p>
+     <a href="about.html">About this project</a>
+     <p>content</p>
   <img src="images/breaching_whale.jpg"/>
+  </body>
 </html>
