--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>About</h1>
-    <!-- Add something here to fix trademark -->
+    <meta charset="utf-8">
      <p>This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.<a href="http://learnenough.com/git-tutorial">…</a></p>
       <img src="images/polar_bear.jpg" alt="Polar bear">
